# etl-pipeline-for-langchain

./: .gitignore  README.md  chat.py  makefile  pyproject.toml
etl/: cleanup_code.py  convert_ipynb_to_myst.py  convert_py_to_md.py  delete_non_md_files.py  orchestrator.py  remove_empty_directories.py  remove_jupyter_text.py  upsert.py
etl/utils/: config.py  logger.py
