[tool.poetry]
name = "ETL"
version = "0.0.1"
description = "Chat with Langchain Docs"
authors = ["Josoroma <pablo@josoroma.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
openai = "^0.27.8"
langchain = "^0.0.251"
weaviate-client = "^3.22.1"
luigi = "^3.3.0"
notebook = "^7.0.1"
jupytext = "^1.15.0"
tiktoken = "^0.4.0"
bs4 = "^0.0.1"
tqdm = "^4.65.0"
unstructured = "^0.9.0"
pydantic = ">=1,<2"
logging = "^0.4.9.6"
markdown = "^3.4.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
